data/derived/sp14/progs/unify/prog2836.ml.out
Characters 8-19:
  let _ = digitsOfInt -3;;
          ^^^^^^^^^^^
Error: This expression has type int -> 'a list
       but an expression was expected of type int
